# -Engram-

./: .env.example  .env.miner.example  .env.miner2  .env.validator.example  .gitignore  Cargo.toml  README.md  TASKS.md  docker-compose.yml  message_and_signature.txt  pyproject.toml  requirements.txt  transfer.sh  vercel.json
docker/: miner.Dockerfile  nginx-miner.conf  validator.Dockerfile
docs/: architecture.md  cli.md  miner.md  mirror-post-1.md  protocol.md  sdk.md  validator.md
engram/: cid.py  cli.py  config.py  protocol.py
engram-core/: Cargo.toml  pyproject.toml
engram-web/: .vercelignore  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
neurons/: miner.py  validator.py
scripts/: benchmark_cid.py  create_subnet_testnet.py  demo_agent_memory.py  fund_from_alice.py  gen_proof.py  gen_setup_guide.py  generate_ground_truth.py  generate_ownership_proof.py  patch-vps-services.sh  reduce-to-one-miner.sh  register_local_subnet.py  register_miner2.py  register_neurons_testnet.py  register_subnet.py  register_validator.py  run_demo.py  seed_corpus.py  seed_miner_ground_truth.py  start-services.sh  start_miner2.sh  test_batch_ingest.py  test_multi_miner.py  test_repair_targeting.py  test_sdk.py  vps-setup.sh
sdk/: client.py
tests/: test_attestation.py  test_auth.py  test_cid.py  test_dht.py  test_e2e_mock.py  test_hybrid_encryption.py  test_memory_lifecycle.py  test_memory_namespace.py  test_memory_proofs.py  test_memory_recovery.py  test_memory_store_advanced.py  test_replication.py  test_scorer.py  (+2 more)
(+77 files in other folders)
